Created basic structure of the github clone.

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Octodex Remake</title>
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/screen.css">
-  </head>
-  <body>
-    <h1 class='hello-world'>Hello, World!</h1>
-  </body>
+	<head lang="en">
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Octodex Remake</title>
+		<link rel="shortcut icon" href="/favicon.ico" />
+		<link rel="stylesheet" href="/screen.css" />
+	</head>
+	<body>
+		<header>GitHub Octodex</header>
+
+		<nav>
+			<ul>
+				<li><a href="http://feeds.feedburner.com/Octocats"> RSS</a></li>
+				<li><a href="https://octodex.github.com/faq.html"> FAQ</a></li>
+				<li><a href="https://github.com/"> Back to GitHub</a></li>
+			</ul>
+		</nav>
+
+		<ul>
+			<li><img src="/images/filmtocats.png" alt="Filmtocats" /></li>
+			<li><img src="/images/Sentrytocat.jpg" alt="Sentrytocat" /></li>
+			<li><img src="/images/puddle_jumper.jpg" alt="Puddle_Jumper" /></li>
+			<li><img src="/images/boxertocat.jpg" alt="Boxertocat" /></li>
+			<li><img src="/images/surftocat.png" alt="Surftocat" /></li>
+			<li><img src="/images/hula_loop.gif" alt="Hulatocat" /></li>
+			<li><img src="/images/scubatocat.png" alt="Scubatocat" /></li>
+			<li><img src="/images/vinyltocat.png" alt="Vinyltocat" /></li>
+		</ul>
+
+		<footer>RSS FAQ © 2013 – 2019 GitHub, Inc. All rights reserved</footer>
+	</body>
 </html>
