Changed list to figures with captions and fixed header.

--- a/public/index.html
+++ b/public/index.html
@@ -8,26 +8,51 @@
 		<link rel="stylesheet" href="/screen.css" />
 	</head>
 	<body>
-		<header>GitHub Octodex</header>
+		<section>
+			<header><img src="/images/githublogo.png" alt="Githublogo" /></header>
 
-		<nav>
-			<ul>
-				<li><a href="http://feeds.feedburner.com/Octocats"> RSS</a></li>
-				<li><a href="https://octodex.github.com/faq.html"> FAQ</a></li>
-				<li><a href="https://github.com/"> Back to GitHub</a></li>
-			</ul>
-		</nav>
-
-		<ul>
-			<li><img src="/images/filmtocats.png" alt="Filmtocats" /></li>
-			<li><img src="/images/Sentrytocat.jpg" alt="Sentrytocat" /></li>
-			<li><img src="/images/puddle_jumper.jpg" alt="Puddle_Jumper" /></li>
-			<li><img src="/images/boxertocat.jpg" alt="Boxertocat" /></li>
-			<li><img src="/images/surftocat.png" alt="Surftocat" /></li>
-			<li><img src="/images/hula_loop.gif" alt="Hulatocat" /></li>
-			<li><img src="/images/scubatocat.png" alt="Scubatocat" /></li>
-			<li><img src="/images/vinyltocat.png" alt="Vinyltocat" /></li>
-		</ul>
+			<nav>
+				<ul>
+					<li><a href="http://feeds.feedburner.com/Octocats"> RSS</a></li>
+					<li><a href="https://octodex.github.com/faq.html"> FAQ</a></li>
+					<li><a href="https://github.com/"> Back to GitHub</a></li>
+				</ul>
+			</nav>
+		</section>
+		<figure>
+			<img src="/images/filmtocats.png" alt="Filmtocats" />
+			<figure-caption>#146 the Filmtocats by</figure-caption>
+		</figure>
+		<!-- Or try this
+      <Figcaption> 
+        <p>#144</p>
+      <p>the 'X' by 'Y' img </p> -->
+		<figure>
+			<img src="/images/Sentrytocat.jpg" alt="Sentrytocat" />#145 the
+			Sentrytocat by
+		</figure>
+		<figure>
+			<img src="/images/puddle_jumper.jpg" alt="Puddle_Jumper" />#144 the
+			Umbrellatocat by
+		</figure>
+		<figure>
+			<img src="/images/boxertocat.jpg" alt="Boxertocat" />#143 the Boxertocat
+			by
+		</figure>
+		<figure>
+			<img src="/images/surftocat.png" alt="Surftocat" />#142 the Surftocat by
+		</figure>
+		<figure>
+			<img src="/images/hula_loop.gif" alt="Hulatocat" />#141 the Hulatocat by
+		</figure>
+		<figure>
+			<img src="/images/scubatocat.png" alt="Scubatocat" />#140 the Scubatocat
+			by
+		</figure>
+		<figure>
+			<img src="/images/vinyltocat.png" alt="Vinyltocat" />#139 the Vinyltocat
+			by
+		</figure>
 
 		<footer>RSS FAQ © 2013 – 2019 GitHub, Inc. All rights reserved</footer>
 	</body>
