Added a lot to the site changed formatting.

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
 	</head>
 	<body>
 		<section>
-			<header><img src="/images/githublogo.png" alt="Githublogo" /></header>
+			<header>
+				<img class="logo" src="/images/githublogo.png" alt="Githublogo" />
+			</header>
 
 			<nav>
 				<ul>
@@ -19,41 +21,47 @@
 				</ul>
 			</nav>
 		</section>
-		<figure>
-			<img src="/images/filmtocats.png" alt="Filmtocats" />
-			<figure-caption>#146 the Filmtocats by</figure-caption>
-		</figure>
-		<!-- Or try this
+		<main>
+			<figure>
+				<img src="/images/filmtocats.png" alt="Filmtocats" />
+				<figcaption>#146 the Filmtocats by</figcaption>
+			</figure>
+			<!-- Or try this
       <Figcaption> 
         <p>#144</p>
       <p>the 'X' by 'Y' img </p> -->
-		<figure>
-			<img src="/images/Sentrytocat.jpg" alt="Sentrytocat" />#145 the
-			Sentrytocat by
-		</figure>
-		<figure>
-			<img src="/images/puddle_jumper.jpg" alt="Puddle_Jumper" />#144 the
-			Umbrellatocat by
-		</figure>
-		<figure>
-			<img src="/images/boxertocat.jpg" alt="Boxertocat" />#143 the Boxertocat
-			by
-		</figure>
-		<figure>
-			<img src="/images/surftocat.png" alt="Surftocat" />#142 the Surftocat by
-		</figure>
-		<figure>
-			<img src="/images/hula_loop.gif" alt="Hulatocat" />#141 the Hulatocat by
-		</figure>
-		<figure>
-			<img src="/images/scubatocat.png" alt="Scubatocat" />#140 the Scubatocat
-			by
-		</figure>
-		<figure>
-			<img src="/images/vinyltocat.png" alt="Vinyltocat" />#139 the Vinyltocat
-			by
-		</figure>
+			<figure>
+				<img src="/images/Sentrytocat.jpg" alt="Sentrytocat" />
+				<figcaption>#145 the Sentrytocat by</figcaption>
+			</figure>
+			<figure>
+				<img src="/images/puddle_jumper.jpg" alt="Puddle_Jumper" />
+				<figcaption>#144 the Umbrellatocat by</figcaption>
+			</figure>
+			<figure>
+				<img src="/images/boxertocat.jpg" alt="Boxertocat" />
+				<figcaption>#143 the Boxertocat by</figcaption>
+			</figure>
+			<figure>
+				<img src="/images/surftocat.png" alt="Surftocat" />
+				<figcaption>#142 the Surftocat by</figcaption>
+			</figure>
+			<figure>
+				<img src="/images/hula_loop.gif" alt="Hulatocat" />
+				<figcaption>#141 the Hulatocat by</figcaption>
+			</figure>
+			<figure>
+				<img src="/images/scubatocat.png" alt="Scubatocat" />
+				<figcaption>#140 the Scubatocat</figcaption>
+				by
+			</figure>
+			<figure>
+				<img src="/images/vinyltocat.png" alt="Vinyltocat" />
+				<figcaption>#139 the Vinyltocat</figcaption>
+				by
+			</figure>
 
-		<footer>RSS FAQ © 2013 – 2019 GitHub, Inc. All rights reserved</footer>
+			<footer>RSS FAQ © 2013 – 2019 GitHub, Inc. All rights reserved</footer>
+		</main>
 	</body>
 </html>
