Added userphotos and edited CSS formatting to look more CSS formatting to look like the real site.

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 			</header>
 
 			<nav>
-				<ul>
+				<ul class="navbuttons">
 					<li><a href="http://feeds.feedburner.com/Octocats"> RSS</a></li>
 					<li><a href="https://octodex.github.com/faq.html"> FAQ</a></li>
 					<li><a href="https://github.com/"> Back to GitHub</a></li>
@@ -24,44 +24,94 @@
 		<main>
 			<figure>
 				<img src="/images/filmtocats.png" alt="Filmtocats" />
-				<figcaption>#146 the Filmtocats by</figcaption>
+				<div class="userphotos">
+					<figcaption>#146</figcaption>
+					<figcaption>the Filmtocats by</figcaption>
+					<a href="https://github.com/heyhayhay"
+						><img
+							src="https://avatars3.githubusercontent.com/u/20049049?v=4"
+							alt="Hayhayhay"
+					/></a>
+				</div>
 			</figure>
-			<!-- Or try this
-      <Figcaption> 
-        <p>#144</p>
-      <p>the 'X' by 'Y' img </p> -->
 			<figure>
 				<img src="/images/Sentrytocat.jpg" alt="Sentrytocat" />
-				<figcaption>#145 the Sentrytocat by</figcaption>
+				<div class="userphotos">
+					<figcaption>#145</figcaption>
+					<figcaption>the Sentrytocat by</figcaption>
+					<a href="https://github.com/cameronmcefee"
+						><img src="https://github.com/cameronmcefee.png" alt="cameronmcefee"
+					/></a>
+				</div>
 			</figure>
 			<figure>
 				<img src="/images/puddle_jumper.jpg" alt="Puddle_Jumper" />
-				<figcaption>#144 the Umbrellatocat by</figcaption>
+				<div class="userphotos">
+					<figcaption>#144</figcaption>
+					<figcaption>the Umbrellatocat by</figcaption>
+					<a href="https://github.com/rubyjazzy"
+						><img src="https://github.com/rubyjazzy.png" alt="rubyjazzy"
+					/></a>
+				</div>
 			</figure>
 			<figure>
 				<img src="/images/boxertocat.jpg" alt="Boxertocat" />
-				<figcaption>#143 the Boxertocat by</figcaption>
+				<div class="userphotos">
+					<figcaption>#143</figcaption>
+					<figcaption>the Boxertocat by</figcaption>
+					<a href="https://github.com/rubyjazzy"
+						><img src="https://github.com/rubyjazzy.png" alt="rubyjazzy"
+					/></a>
+				</div>
 			</figure>
 			<figure>
 				<img src="/images/surftocat.png" alt="Surftocat" />
-				<figcaption>#142 the Surftocat by</figcaption>
+				<div class="userphotos">
+					<figcaption>#142</figcaption>
+					<figcaption>the Surftocat by</figcaption>
+					<a href="https://github.com/jeejkang"
+						><img src="https://github.com/jeejkang.png" alt="jeejkang"
+					/></a>
+				</div>
 			</figure>
 			<figure>
 				<img src="/images/hula_loop.gif" alt="Hulatocat" />
-				<figcaption>#141 the Hulatocat by</figcaption>
+				<div class="userphotos">
+					<figcaption>#141</figcaption>
+					<figcaption>the Hulatocat by</figcaption>
+					<a href="https://github.com/heyhayhay"
+						><img src="https://github.com/heyhayhay.png" alt="heyhayhay"
+					/></a>
+				</div>
 			</figure>
 			<figure>
 				<img src="/images/scubatocat.png" alt="Scubatocat" />
-				<figcaption>#140 the Scubatocat</figcaption>
-				by
+				<div class="userphotos">
+					<figcaption>#140</figcaption>
+					<figcaption>the Scubatocat by</figcaption>
+					<a href="https://github.com/cameronfoxly"
+						><img src="https://github.com/cameronfoxly.png" alt="cameronfoxly"
+					/></a>
+				</div>
 			</figure>
 			<figure>
 				<img src="/images/vinyltocat.png" alt="Vinyltocat" />
-				<figcaption>#139 the Vinyltocat</figcaption>
-				by
+				<div class="userphotos">
+					<figcaption>#139</figcaption>
+					<figcaption>the Vinyltocat by</figcaption>
+					<a href="https://github.com/suziejurado"
+						><img src="https://github.com/suziejurado.png" alt="suziejurado"
+					/></a>
+				</div>
 			</figure>
 
-			<footer>RSS FAQ © 2013 – 2019 GitHub, Inc. All rights reserved</footer>
+			<footer>
+				<p>RSS FAQ</p>
+				<a href="https://github.com/"
+					><img src="/images/logo.png" alt="logo" class="logolink"
+				/></a>
+				<p>© 2013 – 2019 GitHub, Inc. All rights reserved</p>
+			</footer>
 		</main>
 	</body>
 </html>
