Fixed spacing and hyperlinked everything in sight.

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
 	<body>
 		<section>
 			<header>
-				<img class="logo" src="/images/githublogo.png" alt="Githublogo" />
+				<a href="https://octodex.github.com/"
+					><img class="logo" src="/images/githublogo.png" alt="Githublogo"
+				/></a>
 			</header>
 
 			<nav>
@@ -23,7 +25,9 @@
 		</section>
 		<main>
 			<figure>
-				<img src="/images/filmtocats.png" alt="Filmtocats" />
+				<a href="https://octodex.github.com//filmtocats"
+					><img src="/images/filmtocats.png" alt="Filmtocats" />
+				</a>
 				<div class="userphotos">
 					<figcaption>#146</figcaption>
 					<figcaption>the Filmtocats by</figcaption>
@@ -35,7 +39,9 @@
 				</div>
 			</figure>
 			<figure>
-				<img src="/images/Sentrytocat.jpg" alt="Sentrytocat" />
+				<a href="https://octodex.github.com//sentrytocat"
+					><img src="/images/Sentrytocat.jpg" alt="Sentrytocat"
+				/></a>
 				<div class="userphotos">
 					<figcaption>#145</figcaption>
 					<figcaption>the Sentrytocat by</figcaption>
@@ -45,7 +51,9 @@
 				</div>
 			</figure>
 			<figure>
-				<img src="/images/puddle_jumper.jpg" alt="Puddle_Jumper" />
+				<a href="https://octodex.github.com//umbrellatocat"
+					><img src="/images/puddle_jumper.jpg" alt="Puddle_Jumper"
+				/></a>
 				<div class="userphotos">
 					<figcaption>#144</figcaption>
 					<figcaption>the Umbrellatocat by</figcaption>
@@ -55,7 +63,9 @@
 				</div>
 			</figure>
 			<figure>
-				<img src="/images/boxertocat.jpg" alt="Boxertocat" />
+				<a href="https://octodex.github.com//boxertocat"
+					><img src="/images/boxertocat.jpg" alt="Boxertocat"
+				/></a>
 				<div class="userphotos">
 					<figcaption>#143</figcaption>
 					<figcaption>the Boxertocat by</figcaption>
@@ -65,7 +75,9 @@
 				</div>
 			</figure>
 			<figure>
-				<img src="/images/surftocat.png" alt="Surftocat" />
+				<a href="https://octodex.github.com//suftocat"
+					><img src="/images/surftocat.png" alt="Surftocat"
+				/></a>
 				<div class="userphotos">
 					<figcaption>#142</figcaption>
 					<figcaption>the Surftocat by</figcaption>
@@ -75,7 +87,9 @@
 				</div>
 			</figure>
 			<figure>
-				<img src="/images/hula_loop.gif" alt="Hulatocat" />
+				<a href="https://octodex.github.com//hulatocat"
+					><img src="/images/hula_loop.gif" alt="Hulatocat"
+				/></a>
 				<div class="userphotos">
 					<figcaption>#141</figcaption>
 					<figcaption>the Hulatocat by</figcaption>
@@ -85,7 +99,9 @@
 				</div>
 			</figure>
 			<figure>
-				<img src="/images/scubatocat.png" alt="Scubatocat" />
+				<a href="https://octodex.github.com//scubatocat"
+					><img src="/images/scubatocat.png" alt="Scubatocat"
+				/></a>
 				<div class="userphotos">
 					<figcaption>#140</figcaption>
 					<figcaption>the Scubatocat by</figcaption>
@@ -95,7 +111,9 @@
 				</div>
 			</figure>
 			<figure>
-				<img src="/images/vinyltocat.png" alt="Vinyltocat" />
+				<a href="https://octodex.github.com//vinyltocat"
+					><img src="/images/vinyltocat.png" alt="Vinyltocat"
+				/></a>
 				<div class="userphotos">
 					<figcaption>#139</figcaption>
 					<figcaption>the Vinyltocat by</figcaption>
@@ -106,7 +124,8 @@
 			</figure>
 
 			<footer>
-				<p>RSS FAQ</p>
+				<a href="http://feeds.feedburner.com/Octocats"> <p>RSS</p></a>
+				<a href="https://octodex.github.com/faq.html"> <p>FAQ</p></a>
 				<a href="https://github.com/"
 					><img src="/images/logo.png" alt="logo" class="logolink"
 				/></a>
