Added the triangles and changed around padding.

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,19 @@
 
 			<nav>
 				<ul class="navbuttons">
-					<li><a href="http://feeds.feedburner.com/Octocats"> RSS</a></li>
-					<li><a href="https://octodex.github.com/faq.html"> FAQ</a></li>
-					<li><a href="https://github.com/"> Back to GitHub</a></li>
+					<li>
+						<a href="http://feeds.feedburner.com/Octocats" class="navhover">
+							RSS</a
+						>
+					</li>
+					<li>
+						<a href="https://octodex.github.com/faq.html" class="navhover">
+							FAQ</a
+						>
+					</li>
+					<li>
+						<a href="https://github.com/" class="navhover"> Back to GitHub</a>
+					</li>
 				</ul>
 			</nav>
 		</section>
@@ -28,9 +38,13 @@
 				<a href="https://octodex.github.com//filmtocats"
 					><img src="/images/filmtocats.png" alt="Filmtocats" />
 				</a>
+				<div class="triangle"></div>
 				<div class="userphotos">
 					<figcaption>#146</figcaption>
-					<figcaption>the Filmtocats by</figcaption>
+					<figcaption>
+						the
+						<a href="https://octodex.github.com//filmtocats">Filmtocats</a> by
+					</figcaption>
 					<a href="https://github.com/heyhayhay"
 						><img
 							src="https://avatars3.githubusercontent.com/u/20049049?v=4"
@@ -42,9 +56,13 @@
 				<a href="https://octodex.github.com//sentrytocat"
 					><img src="/images/Sentrytocat.jpg" alt="Sentrytocat"
 				/></a>
+				<div class="triangle"></div>
 				<div class="userphotos">
 					<figcaption>#145</figcaption>
-					<figcaption>the Sentrytocat by</figcaption>
+					<figcaption>
+						the
+						<a href="https://octodex.github.com//sentrytocat">Sentrytocat</a> by
+					</figcaption>
 					<a href="https://github.com/cameronmcefee"
 						><img src="https://github.com/cameronmcefee.png" alt="cameronmcefee"
 					/></a>
@@ -54,9 +72,16 @@
 				<a href="https://octodex.github.com//umbrellatocat"
 					><img src="/images/puddle_jumper.jpg" alt="Puddle_Jumper"
 				/></a>
+				<div class="triangle"></div>
 				<div class="userphotos">
 					<figcaption>#144</figcaption>
-					<figcaption>the Umbrellatocat by</figcaption>
+					<figcaption>
+						the
+						<a href="https://octodex.github.com//umbrellatocat">
+							Umbrellatocat</a
+						>
+						by
+					</figcaption>
 					<a href="https://github.com/rubyjazzy"
 						><img src="https://github.com/rubyjazzy.png" alt="rubyjazzy"
 					/></a>
@@ -66,9 +91,13 @@
 				<a href="https://octodex.github.com//boxertocat"
 					><img src="/images/boxertocat.jpg" alt="Boxertocat"
 				/></a>
+				<div class="triangle"></div>
 				<div class="userphotos">
 					<figcaption>#143</figcaption>
-					<figcaption>the Boxertocat by</figcaption>
+					<figcaption>
+						the
+						<a href="https://octodex.github.com//boxertocat">Boxertocat</a> by
+					</figcaption>
 					<a href="https://github.com/rubyjazzy"
 						><img src="https://github.com/rubyjazzy.png" alt="rubyjazzy"
 					/></a>
@@ -78,9 +107,12 @@
 				<a href="https://octodex.github.com//suftocat"
 					><img src="/images/surftocat.png" alt="Surftocat"
 				/></a>
+				<div class="triangle"></div>
 				<div class="userphotos">
 					<figcaption>#142</figcaption>
-					<figcaption>the Surftocat by</figcaption>
+					<figcaption>
+						the <a href="https://octodex.github.com//suftocat">Surftocat </a> by
+					</figcaption>
 					<a href="https://github.com/jeejkang"
 						><img src="https://github.com/jeejkang.png" alt="jeejkang"
 					/></a>
@@ -90,9 +122,13 @@
 				<a href="https://octodex.github.com//hulatocat"
 					><img src="/images/hula_loop.gif" alt="Hulatocat"
 				/></a>
+				<div class="triangle"></div>
 				<div class="userphotos">
 					<figcaption>#141</figcaption>
-					<figcaption>the Hulatocat by</figcaption>
+					<figcaption>
+						the
+						<a href="https://octodex.github.com//hulatocat">Hulatocat </a> by
+					</figcaption>
 					<a href="https://github.com/heyhayhay"
 						><img src="https://github.com/heyhayhay.png" alt="heyhayhay"
 					/></a>
@@ -102,9 +138,13 @@
 				<a href="https://octodex.github.com//scubatocat"
 					><img src="/images/scubatocat.png" alt="Scubatocat"
 				/></a>
+				<div class="triangle"></div>
 				<div class="userphotos">
 					<figcaption>#140</figcaption>
-					<figcaption>the Scubatocat by</figcaption>
+					<figcaption>
+						the
+						<a href="https://octodex.github.com//scubatocat">Scubatocat</a> by
+					</figcaption>
 					<a href="https://github.com/cameronfoxly"
 						><img src="https://github.com/cameronfoxly.png" alt="cameronfoxly"
 					/></a>
@@ -114,9 +154,13 @@
 				<a href="https://octodex.github.com//vinyltocat"
 					><img src="/images/vinyltocat.png" alt="Vinyltocat"
 				/></a>
+				<div class="triangle"></div>
 				<div class="userphotos">
 					<figcaption>#139</figcaption>
-					<figcaption>the Vinyltocat by</figcaption>
+					<figcaption>
+						the
+						<a href="https://octodex.github.com//vinyltocat">Vinyltocat </a>by
+					</figcaption>
 					<a href="https://github.com/suziejurado"
 						><img src="https://github.com/suziejurado.png" alt="suziejurado"
 					/></a>
